--- a/src/styles/components/_article.scss
+++ b/src/styles/components/_article.scss
@@ -63,7 +63,6 @@
     font-weight: $fw-semibold;
     color: $color-primary;
     margin-block: 0;
-    white-space: nowrap;
     @include link-style;
   }
 
